<resources>
    <string name="app_name">DIU Canteen App</string>
    <string name="login">Login</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="register">Registration</string>
    <string name="title_activity_admin_home">Admin Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_student_home">Student Home</string>
    <string name="morning_snacks">Morning Snacks</string>
    <string name="lunch">Lunch</string>
    <string name="evening_snacks">Evening Snacks</string>
    <string name="drinks">Drinks</string>
    <string name="see_cart_details">See Cart Details</string>
    <string name="cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_add_item">Add Item</string>
    <string name="menu_view_item">View Item</string>
    <string name="menu_order_list">Order List</string>
    <string name="import_image">Import Image</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="menu_update_item">Update Item</string>
    <string name="admin_approval">Request Approval</string>
    <string name="want_to_add_user">Approve this user? shakil.py@gmail.com</string>

    <string name="enter_minutes">Minutes!</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="timer">Food will be delivered on 00:00:00</string>
    <string name="cooking">Your food is cooking.</string>
    <string name="account_number">Enter Account Number</string>
    <string name="payment">Payment and order</string>
    <string name="food_type">Food Categories</string>
    <string name="select_payment">Please Select Payment Method</string>
    <string name="add_to_cart">Cart Details</string>
    <string name="total">Total Amount</string>
    <string name="item_name_hint">Enter item name</string>
    <string name="item_stock_hint">Enter item stock</string>
    <string name="item_price_hint">Enter item price in BDT</string>
    <string name="order">Order</string>
    <string name="list_of_items">List of items</string>
    <string name="no_data">No Data</string>
    <string name="welcome">Welcome</string>
    <string name="splash_screen_moto">Thanks for coming to us</string>
</resources>
