<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_item"
            android:icon="@drawable/ic_add_item"
            android:title="@string/menu_add_item" />
        <item
            android:id="@+id/nav_view_item"
            android:icon="@drawable/ic_view_item"
            android:title="@string/menu_view_item" />
        <item
            android:id="@+id/nav_order_list"
            android:icon="@drawable/ic_order_list"
            android:title="@string/menu_order_list" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/nav_sign_out"/>
    </group>


</menu>
