<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:elevation="5dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectangle_background"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:maxLines="1"
                    android:gravity="left|center_vertical"
                    android:textColorHint="@color/md_grey_600"
                    android:hint="@string/item_name_hint"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_800"
                    android:id="@+id/itemNameXMl"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="8dp"
                    android:inputType="number"
                    android:layout_below="@id/itemNameXMl"
                    android:background="@drawable/rectangle_background"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:maxLines="1"
                    android:gravity="left|center_vertical"
                    android:textColorHint="@color/md_grey_600"
                    android:hint="@string/item_stock_hint"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_800"
                    android:id="@+id/itemStockXMl"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectangle_background"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:maxLines="1"
                    android:gravity="left|center_vertical"
                    android:textColorHint="@color/md_grey_600"
                    android:layout_below="@id/itemStockXMl"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_800"
                    android:hint="@string/item_price_hint"
                    android:id="@+id/itemPriceXML" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="vertical"
                    android:layout_below="@id/itemPriceXML"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="6dp"
                    android:id="@+id/spinnerLayout">

                    <Spinner
                        android:layout_width="match_parent"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_height="40dp"
                        android:background="@drawable/rectangle_background"
                        android:id="@+id/spinnerItemCategoryXML"/>

                </LinearLayout>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/spinnerLayout"
                    android:id="@+id/addImageForItemXML"
                    android:layout_margin="12dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="10dp"
                    android:background="@drawable/buttons_shape"
                    android:text="@string/import_image"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"/>

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="144dp"
                    android:id="@+id/imageThumbnailOfImportedImageXML"
                    android:padding="8dp"
                    android:src="@drawable/ic_image_black_24dp"
                    android:layout_margin="10dp"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/addImageForItemXML"/>
                <Button
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/imageThumbnailOfImportedImageXML"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:text="@string/menu_add_item"
                    android:textAllCaps="false"
                    android:background="@drawable/buttons_shape"
                    android:textColor="@android:color/white"
                    android:id="@+id/addItemButtonXML"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</RelativeLayout>