<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.student.PaymentAndOrderActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            style="@style/TextAppearance.Widget.Event.Toolbar.Title"
            app:title="@string/payment"
            app:titleTextColor="@color/md_white_1000">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:padding="8dp"
        android:layout_margin="16dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@color/md_white_1000">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/order"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/select_payment"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/md_grey_800"
                            android:layout_marginTop="6dp"
                            android:textSize="14sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:orientation="vertical"
                            android:layout_below="@id/itemPriceXML"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginTop="4dp">

                            <Spinner
                                android:layout_width="match_parent"
                                style="@style/Base.TextAppearance.AppCompat.Medium"
                                android:layout_height="40dp"
                                android:padding="4dp"
                                android:background="@drawable/rectangle_background"
                                android:id="@+id/paymentMethodsSpinner"/>

                        </LinearLayout>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/account_number"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="16sp"
                            android:background="@drawable/rectangle_background"
                            android:inputType="number"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:padding="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_gravity="left|center"
                            android:gravity="left|center"
                            android:id="@+id/AccountNumber"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="@string/total"
                            android:textSize="14sp"
                            android:textColor="@color/md_grey_800"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="left|center"
                            android:gravity="left|center"
                            android:id="@+id/TotalAmount"
                            android:padding="4dp"
                            android:background="@drawable/rectangle_background"/>
                    </LinearLayout>

                </LinearLayout>


                <Button
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:background="@drawable/buttons_shape"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:text="Order"
                    android:textColor="@color/md_white_1000"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/orderButtonXMLPayment"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/time"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/editext_back"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:text="@string/timer"
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/md_green_400"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>